Added caches to Reply and the /stone command.