@@ -1,10 +1,12 @@
 package xyz.sorridi.stone.utils;
 
 import lombok.NonNull;
+import lombok.val;
 import xyz.sorridi.stone.immutable.ErrorMessages;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.WeakHashMap;
 import java.util.stream.Collectors;
 
 import static com.google.common.base.Preconditions.checkArgument;
@@ -16,6 +18,45 @@ import static com.google.common.base.Preconditions.checkArgument;
  */
 public class Replace
 {
+    private static final
+            WeakHashMap<String,
+            WeakHashMap<String,
+            WeakHashMap<Object, String>>> SINGLE_RES_CACHE;
+
+    private static final
+            WeakHashMap<String,
+            WeakHashMap<String[],
+            WeakHashMap<Object[], String>>> MULTI_RES_CACHE;
+
+    private static final
+            WeakHashMap<String[],
+            WeakHashMap<String,
+            WeakHashMap<Object, String[]>>> MULTI_CACHE_ARR_1;
+
+    private static final
+            WeakHashMap<String[],
+            WeakHashMap<String[],
+            WeakHashMap<Object, String[]>>> MULTI_CACHE_ARR_2;
+
+    private static final
+            WeakHashMap<Collection<String>,
+            WeakHashMap<String,
+            WeakHashMap<Object, Collection<String>>>> MULTI_CACHE_COLL_1;
+
+    private static final
+            WeakHashMap<Collection<String>,
+            WeakHashMap<String[],
+            WeakHashMap<Object[], Collection<String>>>> MULTI_CACHE_COLL_2;
+
+    static
+    {
+        SINGLE_RES_CACHE    = new WeakHashMap<>();
+        MULTI_RES_CACHE     = new WeakHashMap<>();
+        MULTI_CACHE_ARR_1   = new WeakHashMap<>();
+        MULTI_CACHE_ARR_2   = new WeakHashMap<>();
+        MULTI_CACHE_COLL_1  = new WeakHashMap<>();
+        MULTI_CACHE_COLL_2  = new WeakHashMap<>();
+    }
 
     /**
      * Replaces the target with the object in the string.
@@ -26,7 +67,29 @@ public class Replace
      */
     public static <T> String of(@NonNull String what, @NonNull String target, @NonNull T with)
     {
-        return what.replace(target, with.toString());
+        if (SINGLE_RES_CACHE.containsKey(what))
+        {
+            val _what = SINGLE_RES_CACHE.get(what);
+
+            if (_what.containsKey(target))
+            {
+                val _target = _what.get(target);
+
+                if (_target.containsKey(with))
+                {
+                    return _target.get(with);
+                }
+            }
+        }
+
+        String result = what.replace(target, with.toString());
+
+        SINGLE_RES_CACHE
+                .computeIfAbsent(what, k -> new WeakHashMap<>())
+                .computeIfAbsent(target, k -> new WeakHashMap<>())
+                .putIfAbsent(with, result);
+
+        return result;
     }
 
     /**
@@ -41,12 +104,34 @@ public class Replace
     {
         checkArgument(target.length == with.length, ErrorMessages.ARGS_NOT_SAME_SIZE.get());
 
-        for (int i = 0; i < target.length; i++)
+        if (MULTI_RES_CACHE.containsKey(what))
         {
-            what = what.replace(target[i], with[i].toString());
+            val _what = MULTI_RES_CACHE.get(what);
+
+            if (_what.containsKey(target))
+            {
+                val _target = _what.get(target);
+
+                if (_target.containsKey(with))
+                {
+                    return _target.get(with);
+                }
+            }
         }
 
-        return what;
+        String result = what;
+
+        for (int i = 0; i < target.length; i++)
+        {
+            result = result.replace(target[i], with[i].toString());
+        }
+
+        MULTI_RES_CACHE
+                .computeIfAbsent(what, k -> new WeakHashMap<>())
+                .computeIfAbsent(target, k -> new WeakHashMap<>())
+                .putIfAbsent(with, result);
+
+        return result;
     }
 
     /**
@@ -58,7 +143,29 @@ public class Replace
      */
     public static <T> String[] of(@NonNull String[] what, @NonNull String target, @NonNull T with)
     {
-        return Arrays.stream(what).map(s -> s.replace(target, with.toString())).toArray(String[]::new);
+        if (MULTI_CACHE_ARR_1.containsKey(what))
+        {
+            val _what = MULTI_CACHE_ARR_1.get(what);
+
+            if (_what.containsKey(target))
+            {
+                val _target = _what.get(target);
+
+                if (_target.containsKey(with))
+                {
+                    return _target.get(with);
+                }
+            }
+        }
+
+        String[] result = Arrays.stream(what).map(s -> s.replace(target, with.toString())).toArray(String[]::new);
+
+        MULTI_CACHE_ARR_1
+                .computeIfAbsent(what, k -> new WeakHashMap<>())
+                .computeIfAbsent(target, k -> new WeakHashMap<>())
+                .putIfAbsent(with, result);
+
+        return result;
     }
 
     /**
@@ -73,15 +180,37 @@ public class Replace
     {
         checkArgument(target.length == with.length, ErrorMessages.ARGS_NOT_SAME_SIZE.get());
 
-        for (int i = 0; i < what.length; i++)
+        if (MULTI_CACHE_ARR_2.containsKey(what))
         {
-            for (int j = 0; j < target.length; j++)
+            val _what = MULTI_CACHE_ARR_2.get(what);
+
+            if (_what.containsKey(target))
             {
-                what[i] = what[i].replace(target[j], with[j].toString());
+                val _target = _what.get(target);
+
+                if (_target.containsKey(with))
+                {
+                    return _target.get(with);
+                }
             }
         }
 
-        return what;
+        String[] result = what;
+
+        for (int i = 0; i < result.length; i++)
+        {
+            for (int j = 0; j < target.length; j++)
+            {
+                result[i] = result[i].replace(target[j], with[j].toString());
+            }
+        }
+
+        MULTI_CACHE_ARR_2
+                .computeIfAbsent(what, k -> new WeakHashMap<>())
+                .computeIfAbsent(target, k -> new WeakHashMap<>())
+                .putIfAbsent(with, result);
+
+        return result;
     }
 
     /**
@@ -94,7 +223,29 @@ public class Replace
     @SuppressWarnings("unchecked")
     public static <W extends Collection<String>, T> W of(@NonNull W what, @NonNull String target, @NonNull T with)
     {
-        return (W) what.stream().map(s -> s.replace(target, with.toString())).collect(Collectors.toList());
+        if (MULTI_CACHE_COLL_1.containsKey(what))
+        {
+            val _what = MULTI_CACHE_COLL_1.get(what);
+
+            if (_what.containsKey(target))
+            {
+                val _target = _what.get(target);
+
+                if (_target.containsKey(with))
+                {
+                    return (W) _target.get(with);
+                }
+            }
+        }
+
+        W result = (W) what.stream().map(s -> s.replace(target, with.toString())).toList();
+
+        MULTI_CACHE_COLL_1
+                .computeIfAbsent(what, k -> new WeakHashMap<>())
+                .computeIfAbsent(target, k -> new WeakHashMap<>())
+                .putIfAbsent(with, result);
+
+        return result;
     }
 
     /**
@@ -109,7 +260,22 @@ public class Replace
     {
         checkArgument(target.length == with.length, ErrorMessages.ARGS_NOT_SAME_SIZE.get());
 
-        return (W) what.stream().map(s ->
+        if (MULTI_CACHE_COLL_2.containsKey(what))
+        {
+            val _what = MULTI_CACHE_COLL_2.get(what);
+
+            if (_what.containsKey(target))
+            {
+                val _target = _what.get(target);
+
+                if (_target.containsKey(with))
+                {
+                    return (W) _target.get(with);
+                }
+            }
+        }
+
+        W result = (W) what.stream().map(s ->
         {
             for (int i = 0; i < target.length; i++)
             {
@@ -117,7 +283,14 @@ public class Replace
             }
 
             return s;
-        }).collect(Collectors.toList());
+        }).toList();
+
+        MULTI_CACHE_COLL_2
+                .computeIfAbsent(what, k -> new WeakHashMap<>())
+                .computeIfAbsent(target, k -> new WeakHashMap<>())
+                .putIfAbsent(with, result);
+
+        return result;
     }
 
 }
